--- a/src/styles/_css-variables.scss
+++ b/src/styles/_css-variables.scss
@@ -161,6 +161,7 @@
   // NOTE needs to be below the z-index of cdk-overlay which is 1000
   --z-add-task-bar: 999;
   --z-search-bar: 999;
+  --z-onboarding-presets: 999;
   --z-mobile-bottom-nav: 50;
   --z-right-panel: 44;
   --z-right-panel-resize-handle: 65;
